# ixC

indexConstellation/: .gitignore  LICENSE  README.md  START_HERE.md  pyproject.toml
indexConstellation/apps/browser/: index.html  sample.json  sample.jsonl  styles.css
indexConstellation/apps/curator/: README.md  USER-GUIDE.md  index.html  privacy-policy.md  terms-of-service.md
indexConstellation/docs/: glossary.md  invariants.md  philosophy.md  threat_model.md  verification_report.md
indexConstellation/docs/schemas/: annotation_schema.yaml  dataset_schema.yaml  intent_schema.yaml
indexConstellation/ixc/: cli.py
indexConstellation/pipeline/: __init__.py  runner.py
